--- a/client/package.json
+++ b/client/package.json
@@ -24,12 +24,17 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "babel-register": "^6.26.0",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "4.16.2",
     "express-react-views": "0.10.5",
+    "lokijs": "^1.5.1",
+    "phaser": "^2.6.2",
     "prop-types": "^15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "socket.io": "2.0.4",
+    "underscore": "^1.8.3",
+    "uuid": "^3.2.1",
     "webpack": "3.10.0"
   }
 }
