--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "mocha": "^2.5.3"
   },
   "dependencies": {
+    "amqplib": "^0.5.2",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-plugin-transform-class-properties": "6.24.1",
